# leonardo-theme-grayscale

./: AUTHORS  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
leonardo_theme_grayscale/: __init__.py
leonardo_theme_grayscale/static/fonts/: Magion-Regular.eot
leonardo_theme_grayscale/static/js/: grayscale.js
leonardo_theme_grayscale/static/themes/grayscale/: _styles.scss
leonardo_theme_grayscale/static/themes/grayscale/grayscale/: _variables.scss
leonardo_theme_grayscale/templates/base/page/: grayscale.html
leonardo_theme_grayscale/templates/widget/contextnavigation/: _modal_item.html  fullscreen.html  fullscreen_grayscale.html
leonardo_theme_grayscale/templates/widget/counter/: knob.html
leonardo_theme_grayscale/templates/widget/icon/: circle.html
leonardo_theme_grayscale/templates/widget/maplocation/: grayscale.html
leonardo_theme_grayscale/templates/widget/pagetitle/: section.html  section_light.html  section_with_transition.html  section_with_transition_light.html
leonardo_theme_grayscale/templates/widget/simpleimage/: default.html
leonardo_theme_grayscale/templates/widget/siteheading/: styled.html
leonardo_theme_grayscale/templates/widget/treenavigation/: grayscale.html  styled.html
