[metadata]
name = leonardo-theme-grayscale
summary = grayscale theme for Leonardo CMS
description-file =
    README.rst
author = Dominik Resl
author-email = nikicresl@gmail.com
home-page = https://github.com/dresl/leonardo-theme-grayscale.git
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    leonardo_theme_grayscale
